cmake_minimum_required(VERSION 3.26)
set(COMPONENT_NAME if)

include_directories(../../)
include_directories(acd)
aux_source_directory(. SRCS)
list(REMOVE_ITEM SRCS "./ifCheck.c")
list(APPEND SRCS "./acd/ac_wrapper.cpp")
add_library(${COMPONENT_NAME} ${SRCS})
add_library(${PROJECT_NAME}::${SUBFOLDER_NAME}::${COMPONENT_NAME} ALIAS ${COMPONENT_NAME})
